syntax = "proto3";

import "bigint.proto";
import "container.proto";
import "hub.proto";
import "insonmnia.proto";
import "marketplace.proto";

package sonm;

// The SONM Local node API must also include
// the Marketplace API, but it already has been described
// into a "proto/marketplace.proto" file.

// TaskManagement describe a bunch of methods
// to manage tasks running into the SONM network
service TaskManagement {
    // List produces a list of all tasks running on different SONM nodes
    rpc List(TaskListRequest) returns (TaskListReply) {}
    // PushTask pushes image to Worker
    rpc PushTask(stream Chunk) returns (stream Progress) {}
    // Start starts a task on given resource
    rpc Start(StartTaskRequest) returns (StartTaskReply) {}
    // JoinNetwork provides network specs to join specified task
    rpc JoinNetwork(JoinNetworkRequest) returns (NetworkSpec) {}
    // Status produces a task status by their ID
    rpc Status(TaskID) returns (TaskStatusReply) {}
    // Logs retrieves a task log (stdin/stderr) from given task
    rpc Logs(TaskLogsRequest) returns (stream TaskLogsChunk) {}
    // Stop stops a task by their ID
    rpc Stop(TaskID) returns (Empty) {}
    // PullTask pulls task image back
    rpc PullTask(PullTaskRequest) returns (stream Chunk) {}
}

message JoinNetworkRequest {
    TaskID taskID = 1;
    string NetworkID = 2;
}

message TaskListRequest {
    BigInt dealID = 1;
}

// DealManagement describe a bunch of methods
// to manage deals made into the SONM network
service DealManagement {
    // List produces a list of all deals made by client with given ID
    rpc List(Count) returns (DealsReply) {}
    // Status produces a detailed info about deal with given ID.
    rpc Status(ID) returns (DealInfoReply) {}
    // Finish finishes a deal with given ID
    rpc Finish(ID) returns (Empty) {}
    // Open tries to open deal between two orders
    rpc Open(OpenDealRequest) returns (Deal) {}
}

message DealsReply {
    repeated Deal deal = 1;
}

message OpenDealRequest {
    BigInt bidID = 1;
    BigInt askID = 2;
}

// todo: implement this as part of Node API
service MasterManagement {
    // WorkersList returns worker's list for current master address.
    // List includes already registred workers and pending unapproved requests.
    rpc WorkersList(Empty) returns (WorkerListReply) {}
    // WorkerConfirm (as master) confirms incoming request for given Worker address.
    rpc WorkerConfirm(ID) returns (Empty) {}
    // WorkerRemove (as master) unbinds given Worker address from Master address.
    rpc WorkerRemove(ID) returns (Empty) {}
}

enum WorkerRelationshipStatus {
    RELATION_UNAPPROVED = 0;
    RELATION_APPROVED = 1;
}

message Worker {
    string ID = 1;
    WorkerRelationshipStatus status = 2;
}

message WorkerListReply {
    repeated Worker workers = 1;
}

service TokenManagement {
    // TestTokens increases balance for some amount of test tokens
    // into live-chian ethereum network.
    rpc TestTokens(Empty) returns (Empty) {}
    // Balance provide account balance for live- and side- chains.
    rpc Balance(Empty) returns (BalanceReply) {}
}

message BalanceReply {
    BigInt liveBalance = 1;
    BigInt sideBalance = 2;
}
